--- a/Desktop/package.json
+++ b/Desktop/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "buffer": "^6.0.3",
+    "chart.js": "^4.5.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
+    "react-datepicker": "^8.8.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.2"
@@ -19,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.13",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
     "eslint": "^9.36.0",
