--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.2"
+    "react-router-dom": "^7.9.2",
+    "react-select": "^5.10.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
