Tentando arrumar vercel.json 2

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
+  "builds": [
+    { "src": "dist/**", "use": "@vercel/static" }
+  ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
-
 }
